--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <version>2.15.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.5.0</version>
+        </dependency>
+
 
     </dependencies>
 
